@@ -634,6 +634,7 @@ localizedStrings["Invalid"] = "Invalid";
 localizedStrings["Inverted"] = "Inverted";
 localizedStrings["Invisible characters"] = "Invisible characters";
 localizedStrings["Invoke getter"] = "Invoke getter";
+localizedStrings["It is evaluated immediately after the global object is created, before any other content has loaded."] = "It is evaluated immediately after the global object is created, before any other content has loaded.";
 localizedStrings["JP2"] = "JP2";
 localizedStrings["JPEG"] = "JPEG";
 localizedStrings["JavaScript"] = "JavaScript";
@@ -714,6 +715,7 @@ localizedStrings["Microtask Dispatched"] = "Microtask Dispatched";
 localizedStrings["Microtask Fired"] = "Microtask Fired";
 localizedStrings["Missing result level"] = "Missing result level";
 localizedStrings["Mixed"] = "Mixed";
+localizedStrings["Modifications made here will take effect on the next load of any page or sub-frame."] = "Modifications made here will take effect on the next load of any page or sub-frame.";
 localizedStrings["Module Code"] = "Module Code";
 localizedStrings["Multi-Entry"] = "Multi-Entry";
 localizedStrings["Name"] = "Name";
@@ -1057,6 +1059,7 @@ localizedStrings["Snapshot Comparison (%d and %d)"] = "Snapshot Comparison (%d a
 localizedStrings["Snapshot List"] = "Snapshot List";
 localizedStrings["Socket"] = "Socket";
 localizedStrings["Sockets"] = "Sockets";
+localizedStrings["Some examples of ways to use this script include (but are not limited to):"] = "Some examples of ways to use this script include (but are not limited to):";
 localizedStrings["Sort Ascending"] = "Sort Ascending";
 localizedStrings["Sort Descending"] = "Sort Descending";
 localizedStrings["Source"] = "Source";
@@ -1121,12 +1124,14 @@ localizedStrings["Template Content"] = "Template Content";
 localizedStrings["Text"] = "Text";
 localizedStrings["Text Frame"] = "Text Frame";
 localizedStrings["Text Node"] = "Text Node";
+localizedStrings["The Inspector Bootstrap Script is guaranteed to be the first script evaluated in any page, as well as any sub-frames."] = "The Inspector Bootstrap Script is guaranteed to be the first script evaluated in any page, as well as any sub-frames.";
 localizedStrings["The \u201C%s\u201D audit failed"] = "The \u201C%s\u201D audit failed";
 localizedStrings["The \u201C%s\u201D audit is unsupported"] = "The \u201C%s\u201D audit is unsupported";
 localizedStrings["The \u201C%s\u201D audit passed"] = "The \u201C%s\u201D audit passed";
 localizedStrings["The \u201C%s\u201D audit resulted in a warning"] = "The \u201C%s\u201D audit resulted in a warning";
 localizedStrings["The \u201C%s\u201D audit threw an error"] = "The \u201C%s\u201D audit threw an error";
 localizedStrings["The \u201C%s\u201D\ntable is empty."] = "The \u201C%s\u201D\ntable is empty.";
+localizedStrings["The contents and enabled state will be preserved across Web Inspector sessions."] = "The contents and enabled state will be preserved across Web Inspector sessions.";
 localizedStrings["The page's content has changed"] = "The page's content has changed";
 localizedStrings["The resource was requested insecurely."] = "The resource was requested insecurely.";
 localizedStrings["There is an incurred energy penalty each time the page enters script. This commonly happens with timers, event handlers, and observers."] = "There is an incurred energy penalty each time the page enters script. This commonly happens with timers, event handlers, and observers.";
@@ -1296,6 +1301,7 @@ localizedStrings["\u201C%s\u201D Profile Recorded"] = "\u201C%s\u201D Profile Re
 localizedStrings["computed"] = "computed";
 localizedStrings["default"] = "default";
 localizedStrings["default prevented"] = "default prevented";
+localizedStrings["ensuring that common debugging functions are available on every page via the Console"] = "ensuring that common debugging functions are available on every page via the Console";
 localizedStrings["for changes to take effect"] = "for changes to take effect";
 localizedStrings["invalid HAR"] = "invalid HAR";
 localizedStrings["invalid JSON"] = "invalid JSON";
@@ -1307,6 +1313,7 @@ localizedStrings["non-number %s"] = "non-number %s";
 localizedStrings["non-object %s"] = "non-object %s";
 localizedStrings["non-string %s"] = "non-string %s";
 localizedStrings["originally %s"] = "originally %s";
+localizedStrings["overriding built-in functions to log call traces or add `debugger` statements"] = "overriding built-in functions to log call traces or add `debugger` statements";
 localizedStrings["popup"] = "popup";
 localizedStrings["popup, toggle"] = "popup, toggle";
 localizedStrings["requestAnimationFrame Fired"] = "requestAnimationFrame Fired";
